FIX: fix footer and white space at the bottom of the page

--- a/src/components/projects/ProjectThumbnailStyle.scss
+++ b/src/components/projects/ProjectThumbnailStyle.scss
@@ -2,10 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    margin: var(--padding-xxlarge) var(--padding-regular);
     border: 1px solid var(--primary);
-    border-radius: var(--border-radius-small, 4px);
   
     &__container {
       display: flex;
